# gelixrs

./: Cargo.toml
crates/ast/: Cargo.toml
crates/ast-generator/: Cargo.toml
crates/ast/src/: literal.rs  module.rs
crates/common/: Cargo.toml
crates/e2etest/: Cargo.toml
crates/e2etest/src/: test.rs
crates/error/: Cargo.toml
crates/error/src/: lib.rs
crates/gelixrs/: Cargo.toml
crates/gelixrs-cli/: Cargo.toml
crates/gelixrs-cli/src/: main.rs
crates/gir/: Cargo.toml
crates/gir-generator/: Cargo.toml
crates/gir-generator/src/: intrinsics.rs  result.rs
crates/gir-ir-adapter/: Cargo.toml
crates/gir-nodes/: Cargo.toml
crates/gir-nodes/src/: expression.rs
crates/ir/: Cargo.toml
crates/parser/: Cargo.toml
crates/syntax/: Cargo.toml
docs/: book.toml
docs/src/: install.md  modules.md  welcome.md
error/: Cargo.toml
error/src/: lib.rs
gelixrs/: Cargo.toml
gelixrs-cli/: Cargo.toml
ir/: Cargo.toml
lexer/: Cargo.toml
parser/: Cargo.toml
src/: bench.rs  error.rs  lib.rs  main.rs  option.rs  tests.rs
src/ast/: declaration.rs  expression.rs  literal.rs  mod.rs  module.rs
src/codegen/: mod.rs  resolver.rs
src/gir/: result.rs
src/gir/generator/: intrinsics.rs
src/hir/: result.rs
src/ir/: gc.rs  gen_expr.rs  intrinsics.rs  mod.rs  types.rs  values.rs
src/lexer/: mod.rs  token.rs
src/mir/: builder.rs  generator.rs  mir.rs  mod.rs  nodes.rs  result.rs
src/parser/: mod.rs  parser.rs  parsing.rs
stdlib/: Cargo.toml
stdlib/src/: lib.rs
syntax/: Cargo.toml
tests/for/: range.gel
tests/interfaces/: no_dupe_impl.gel
(+41 files in other folders)
