[package]
name = "gelixrs_cli"
version = "0.1.0"
authors = ["Felix Ang. <felix.ang@protonmail.com>"]
edition = "2018"
default-run = "gelixrs_cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.18"

gelixrs = { path = "../gelixrs" }
